# LaadleLang

./: Cargo.toml  LICENSE  README.md  build.rs  help.md  vm_design.md
.github/workflows/: build-master.yml  docs.yml  release.yml
docs/: laadle.tmLanguage.json  language-configuration.json  next.config.mjs  package-lock.json  package.json  source.config.ts
docs/app/(home)/: page.tsx
docs/app/playground/: page.tsx
docs/components/: mermaid.tsx  playground.tsx
docs/content/docs/: index.md  meta.json
docs/content/docs/language-guide/: basics.md  control_flow.md  errors.md  functions.md  meta.json
docs/content/docs/quick-start/: example_collatz.md  example_error.md  example_factorial.md  example_fibonacci.md  index.md  meta.json
docs/content/docs/under-the-hood/: index.md
docs/lib/: layout.shared.tsx
docs/public/playground/: app.js  index.html  laadlelang_bg.wasm  style.css
playground/: package-lock.json  package.json
playground/src/: app.js  style.css
src/: ast.rs  compiler.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  vm.rs
tests/: e2e.rs  wasm.rs
