[package]
name = "laadlelang"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "17.0.2"
inquire = "0.9.4"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
